  entirely.
* …

==== Changed configuration ====
* …

==== Removed configuration ====
* $wgUseTwoButtonsSearchForm - This setting, deprecated in 1.35, has been
  removed.
* $wgAllowImageMoving - This setting, deprecated in 1.35, has been removed.
  Use group permission settings instead. For example, to prevent sysops
  from moving files, set `$wgGroupPermissions['sysop']['movefile'] = false;`
* …

=== New user-facing features in 1.36 ===
* All HTML5 named entities are now accepted in wikitext.
* …

=== New developer features in 1.36 ===
* Parser test files can now declare a dependency on a specific extension
  being loaded, not just on the presence of a certain extension tag hook.
  This is a better fit for extensions like TimedMediaHandler, which affect
  the output but don't register parser hooks.  Use `extension:Foo` in
  the `!! hooks` section of your parser test file to declare a dependency
  on the `Foo` extension being loaded.
* To expose code previously present in SpecialBlock/SpecialUnblock
  to other parts of the code, or to extensions,
  the new BlockUser and UnblockUser command objects were added.
  Use the BlockUserFactory and UnblockUserFactory services to create them.
* The hook UsersPagerDoBatchLookupsHook takes now a \Wikimedia\Rdbms\IDatabase
  instead of \Wikimedia\Rdbms\DBConnRef as first parameter
* …

=== External library changes in 1.36 ===
* …

==== New external libraries ====
* …

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* pear/mail_mime was upgraded from 1.10.8 to 1.10.9.
* wikimedia/html-formatter was upgraded from 1.0.2 to 2.0.0.
* Updated OOUI from 0.39.3 to 0.40.4.
* Updated jquery.client from 2.0.2 to 3.0.0.
* Updated guzzlehttp/guzzle from 6.5.4 to 7.0.1.
* Updated pear/net_smtp from 1.9.1 to 1.9.2.
* …

===== Changed development-only external libraries =====
* Updated composer/spdx-licenses from 1.5.3 to 1.5.4.
* doctrine/sql-formatter was upgraded from 1.1.0 to 1.1.1.